# BiSpell

./: README.md
.github/workflows/: windows-core.yml  windows-release.yml
Resources/: AppIcon.icns
Resources/AppIcon.iconset/: diana.k@example.org  ivan.p@example.net
Scripts/: package-app.sh
Sources/BiSpellApp/: BiSpellApp.swift  JSONFileDocument.swift  LockLabelSheet.swift  NoteTextEditor.swift  NotesAppearanceController.swift  NotesRootView.swift  NotesViewModel.swift  SettingsView.swift  TaxonomyController.swift  TemplateVariablesSheet.swift
Sources/BiSpellApp/UI/: MarkdownPreviewView.swift  NotesCommandStrip.swift  NotesSidebarRow.swift  NotesStatusBar.swift  NotesTabBar.swift  NotesThemeSwiftUI.swift  TaxonomyChips.swift
Sources/BiSpellCore/: AppSettings.swift  CorrectionLog.swift  LockedSpan.swift  Note.swift  NoteLibrary.swift  NotesAppearance.swift  NotesStore.swift  TaxonomyColors.swift  TemplatePack.swift  TemplateVariables.swift
Tests/BiSpellCoreTests/: NotesAppearanceTests.swift  NotesStoreTests.swift  TemplatePackTests.swift  TemplateVariablesTests.swift
docs/: PHASES.md  WINDOWS.md  WINDOWS_PHASES.md
windows/: .gitignore  CMakeLists.txt  README.md
windows/app/: BiSpell.sln  README.md
windows/app/BiSpell.App/: App.xaml  App.xaml.cs  BiSpell.App.csproj  CrashLog.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Program.cs  Run-BiSpell.cmd  app.manifest
windows/app/BiSpell.App/Assets/: README.txt
windows/app/BiSpell.App/Interop/: BispellEngine.cs  NativeMethods.cs  NativeString.cs  UiaComInterop.cs
windows/app/BiSpell.App/Models/: MisspellingItem.cs
windows/app/BiSpell.App/Properties/: launchSettings.json
windows/app/BiSpell.App/Services/: AppPaths.cs  EditorSpellDebouncer.cs  GlobalHotkeyService.cs  NotesStore.cs  SettingsStore.cs  TrayIconService.cs  UiaFocusSnapshot.cs  UiaSupportTier.cs  UiaTextAccess.cs  UtilityHotkeyOrchestrator.cs  Win32ClipboardText.cs
windows/app/BiSpell.App/UI/: SuggestionPopupController.cs
windows/app/BiSpell.App/Utilities/: ClipboardSpellFix.cs
windows/app/native/: README.md
windows/app/scripts/: build-installer.ps1  build-native.cmd  build-native.ps1  package-release.ps1  smoke-launch.ps1  stage-dictionaries.ps1
windows/assets/Dictionaries/: README.md
windows/core/: CMakeLists.txt
windows/core/include/bispell/: app_settings.hpp  bispell.hpp  c_api.h  case_fold.hpp  clock.hpp  dictionary.hpp  encoding.hpp  engine.hpp  error.hpp  language_tagger.hpp  paths.hpp  spell_engine.hpp  system_spell_suggester.hpp  tokenizer.hpp  types.hpp  user_lexicon.hpp
windows/core/src/: c_api.cpp  case_fold.cpp  dictionary.cpp  encoding.cpp  language_tagger.cpp  paths.cpp  spell_engine.cpp  tokenizer.cpp  user_lexicon.cpp
windows/installer/: BiSpell.iss  README.md
windows/tests/: CMakeLists.txt  test_assert.hpp  test_c_api_lexicon.cpp  test_dictionary.cpp  test_encoding.cpp  test_language_tagger.cpp  test_lexicon.cpp  test_spell_engine.cpp  test_tokenizer.cpp
